# OpenBench

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  LICENSE  Makefile  README.md  evaluation.py  pyproject.toml
common/: __init__.py  dataset_statistics.py  download_dataset.py  sink_wandb.py  sync_data.py
config/: evaluation_config.yaml
config/benchmark_config/: base.yaml
config/benchmark_config/datasets/: aishell-4.yaml  ali-meetings.yaml  american-life-podcast-val.yaml  american-life-podcast.yaml  ami-ihm-val.yaml  ami-ihm.yaml  ami-sdm-val.yaml  ami-sdm.yaml  ava-avd-val.yaml  ava-avd.yaml  callhome.yaml  callhome_hf.yaml  dihard-3-core.yaml  dihard-3.yaml  earnings21.yaml  earnings22-keywords-debug.yaml  earnings22-keywords.yaml  ego4d.yaml  icsi.yaml  kws-debug.yaml  kws-golden.yaml  msdwild.yaml  timit-debug.yaml  timit-stitched.yaml  timit.yaml  voxconverse-dev.yaml  voxconverse.yaml
config/benchmark_config/metrics/: confirmed_streaming_latency.yaml  der.yaml  detection_cost_function.yaml  detection_error_rate.yaml  detection_precision_recall_fmeasure.yaml  diarization_homogeneity.yaml  diarization_purity.yaml  diarization_purity_coverage_fmeasure.yaml  jer.yaml  keyword_fscore.yaml  keyword_precision.yaml  keyword_recall.yaml  model_timestamp_confirmed_streaming_latency.yaml  model_timestamp_streaming_latency.yaml  number_deletions.yaml  number_insertions.yaml  number_substitutions.yaml  sca.yaml  scer.yaml  scmae.yaml  streaming_latency.yaml  wder.yaml  wer.yaml
config/benchmark_config/wandb_config/: active.yaml  disabled.yaml
config/pipeline_configs/: DeepgramBoostingPipeline.yaml  DeepgramStreamingPipeline.yaml  DeepgramTranscriptionPipeline.yaml  FireworksStreamingPipeline.yaml  GladiaStreamingPipeline.yaml  NeMoBoostingPipeline.yaml  NeMoTranscriptionPipeline.yaml  OpenAIBoostingPipeline.yaml  OpenAIStreamingPipeline.yaml  OpenAITranscriptionPipeline.yaml  PyannoteApi.yaml  WhisperX.yaml  aws-transcribe.yaml  nemo_sortformer.yaml  picovoice.yaml  pyannote.yaml  speakerkit.yaml
icml_analysis/: Deepgram_timit_results.csv  Fireworks_timit_results.csv  OpenAI_timit_results.csv  WhisperKit_timit_results.csv  WhisperKit_timit_results_non_casual.csv  paper-figures.ipynb
interspeech_analysis/: paper-figures.ipynb
src/openbench/: pipeline_prediction.py  types.py
src/openbench/cli/: __init__.py  command_utils.py  main.py
src/openbench/dataset/: dataset_aliases.py  dataset_base.py  dataset_diarization.py  dataset_orchestration.py  dataset_registry.py  dataset_streaming_transcription.py  dataset_transcription.py
src/openbench/engine/: __init__.py  deepgram_engine.py  openai_engine.py  whisperkitpro_engine.py
src/openbench/metric/: __init__.py  metric.py  speaker_count_metrics.py
src/openbench/pipeline/: __init__.py  pipeline_aliases.py  pipeline_registry.py  utils.py
src/openbench/runner/: __init__.py  benchmark.py  config.py  data_models.py  wandb_logger.py
src/sdbench/: __init__.py  dataset.py  pipeline_prediction.py  types.py
src/sdbench/cli/: __init__.py  command_utils.py  main.py
src/sdbench/dataset/: __init__.py  dataset_aliases.py  dataset_base.py  dataset_diarization.py  dataset_registry.py  dataset_transcription.py  dataset_utils.py
src/sdbench/metric/: __init__.py  metric.py  registry.py  speaker_count_metrics.py
src/sdbench/pipeline/: __init__.py  base.py  pipeline_aliases.py  utils.py
src/sdbench/runner/: benchmark.py  config.py  data_models.py  utils.py  wandb_logger.py
tests/cli/: test_main.py
(+79 files in other folders)
