[tool.poetry]
name = "sdbench"
version = "0.1.0"
description = "Benchmark suite for speaker diarization"
authors = ["Argmax Inc. <info@takeargmax.com>"]
readme = "README.md"
packages = [{include = "sdbench", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
black = "^24.10.0"
pydantic = "^2.9.2"
numba = "~0.60.0"
llvmlite = "0.43.0"
pyannote-audio = "^3.3.2"
datasets = "^3.1.0"
argmaxtools = "^0.1.14"
hydra-core = "^1.3.2"
wandb = "^0.19.0"
umap-learn = "^0.5.7"
hdbscan = "^0.8.40"
plotly = "^5.24.1"
kaleido = "0.2.1"
librosa = "^0.10.2.post1"
boto3 = "^1.36.20"
pvfalcon = "^1.0.4"
jiwer = "^3.1.0"
whisperx = "^3.3.1"
torch = "2.5.0"
scikit-learn = "1.5.1"
speechbrain = "1.0.2"
websockets = "^10.1"
dotenv = "^0.9.9"
websocket-client = "^1.8.0"

[tool.poetry.group.dataset.dependencies]
gdown = "^5.2.0"
lxml = "^5.3.0"
textgrid = "^1.6.1"
kaggle = "^1.6.17"
pydub = "^0.25.1"
transformers = "^4.48.2"
ego4d = "^1.7.3"

[tool.poetry.scripts]
sdbench = "cli.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"